--- a/output_graph/report_1_base_models.tex
+++ b/output_graph/report_1_base_models.tex
@@ -2,14 +2,15 @@
 \toprule
 Model & MAE & RMSE & MAPE (%) \\
 \midrule
-TFT & 9184.77 & 11971.45 & 5.16 \\
-XGBoost & 13819.50 & 16517.04 & 8.71 \\
-SVR & 13296.01 & 17475.14 & 7.28 \\
-LightGBM & 13474.28 & 17949.10 & 7.41 \\
-CatBoost & 13506.23 & 18097.57 & 7.07 \\
+TFT & 11341.18 & 15751.13 & 5.56 \\
+LightGBM & 13170.85 & 17255.85 & 7.12 \\
+XGBoost & 13467.13 & 17481.88 & 7.49 \\
+CatBoost & 13816.05 & 18090.58 & 7.25 \\
+SVR & 14524.78 & 18922.08 & 8.02 \\
 ElasticNet & 17071.01 & 20509.54 & 10.67 \\
 Prophet & 19161.23 & 24113.40 & 13.15 \\
-KNN & 21115.15 & 26518.89 & 12.37 \\
+SARIMAX & 18840.31 & 25071.38 & 13.05 \\
+KNN & 20653.98 & 26280.07 & 12.11 \\
 LSTM & 21292.89 & 26590.97 & 12.91 \\
 \bottomrule
 \end{tabular}
