added few more models, working state of art

--- a/output_graph/report_1_base_models.tex
+++ b/output_graph/report_1_base_models.tex
@@ -3,14 +3,16 @@
 Model & MAE & RMSE & MAPE (%) \\
 \midrule
 TFT & 11341.18 & 15751.13 & 5.56 \\
-LightGBM & 13170.85 & 17255.85 & 7.12 \\
-XGBoost & 13467.13 & 17481.88 & 7.49 \\
-CatBoost & 13816.05 & 18090.58 & 7.25 \\
-SVR & 14524.78 & 18922.08 & 8.02 \\
+N-HiTS & 12623.42 & 17062.42 & 6.44 \\
+LightGBM & 13324.03 & 17436.87 & 7.26 \\
+CatBoost & 13575.52 & 18047.58 & 7.25 \\
+XGBoost & 13781.40 & 18373.76 & 7.32 \\
+ExtraTrees & 15100.13 & 19466.71 & 8.31 \\
+SVR & 14693.86 & 20447.90 & 7.72 \\
 ElasticNet & 17071.01 & 20509.54 & 10.67 \\
 Prophet & 19161.23 & 24113.40 & 13.15 \\
 SARIMAX & 18840.31 & 25071.38 & 13.05 \\
-KNN & 20653.98 & 26280.07 & 12.11 \\
 LSTM & 21292.89 & 26590.97 & 12.91 \\
+KNN & 21218.81 & 26752.30 & 12.39 \\
 \bottomrule
 \end{tabular}
