add 2 mode models

--- a/output_graph/report_1_base_models.tex
+++ b/output_graph/report_1_base_models.tex
@@ -2,17 +2,18 @@
 \toprule
 Model & MAE & RMSE & MAPE (%) \\
 \midrule
-TFT & 11341.18 & 15751.13 & 5.56 \\
-N-HiTS & 12623.42 & 17062.42 & 6.44 \\
-LightGBM & 13324.03 & 17436.87 & 7.26 \\
-CatBoost & 13575.52 & 18047.58 & 7.25 \\
-XGBoost & 13781.40 & 18373.76 & 7.32 \\
-ExtraTrees & 15100.13 & 19466.71 & 8.31 \\
-SVR & 14693.86 & 20447.90 & 7.72 \\
+LightGBM & 13450.68 & 17390.20 & 7.31 \\
+SVR & 14160.04 & 17688.43 & 8.28 \\
+TFT & 14208.38 & 17740.47 & 8.55 \\
+CatBoost & 13685.95 & 18012.82 & 7.31 \\
+XGBoost & 13671.11 & 18346.80 & 7.33 \\
+ExtraTrees & 14313.75 & 18414.10 & 7.73 \\
+N-HiTS & 13568.06 & 18465.16 & 7.08 \\
 ElasticNet & 17071.01 & 20509.54 & 10.67 \\
+NeuralProphet & 17962.59 & 22245.07 & 11.74 \\
 Prophet & 19161.23 & 24113.40 & 13.15 \\
 SARIMAX & 18840.31 & 25071.38 & 13.05 \\
+KNN & 21132.70 & 26542.04 & 12.37 \\
 LSTM & 21292.89 & 26590.97 & 12.91 \\
-KNN & 21218.81 & 26752.30 & 12.39 \\
 \bottomrule
 \end{tabular}
